# ARISA-MLOps

./: .gitignore  pyproject.toml
.github/workflows/: lint-code.yml
